# securities-recon

./: .gitignore  README.md  custodian_a.csv  pyproject.toml  recon-implementation.patch  securities_reference.csv
.kiro/specs/recon-demo-thought-leadership-hooks/: design.md  requirements.md  tasks.md
.kiro/specs/recon-production-aws-deployment/: .config.kiro
.kiro/specs/recon-project/: .config.kiro  requirements.md  tasks.md
.kiro/steering/: agentcore-cli-patterns.md  aws-best-practices.md  mcp-tools-usage.md  product.md  python-code-standards.md  strands-agents-patterns.md  structure.md  tech.md
.kiro/steering/hooks/: pyproject-sync.json
GS-Technical-Case-Study/: .gitignore  Instructions.md  README.md  custodian_b.csv  pyproject.toml
GS-Technical-Case-Study/code/: models.py
GS-Technical-Case-Study/code/pipeline/: ingest.py  reconcile.py
GS-Technical-Case-Study/code/tests/: test_envelope_invariant.py  test_resolver_ambiguity.py
GS-Technical-Case-Study/code/tests/fixtures/: custodian_b_empty.csv  custodian_b_paren.csv  custodian_b_year.csv
GS-Technical-Case-Study/code/tools/: securities.py  trades.py
GS-Technical-Case-Study/img/: architecture.mmd
architecture/: low_level_architecture.mmd  production_design.md
code/: agent.py  models.py  run.py
code/pipeline/: ingest.py  reconcile.py  report.py
code/tests/: test_ingest_paren.py  test_one_sided.py  test_ticker_dot.py  test_year_mismatch.py
code/tests/fixtures/: custodian_a_brka.csv  custodian_a_tsla_only.csv
code/tools/: classification.py  corporate_actions.py  recommendation.py  trades.py
img/: architecture.mmd
