[project]
name = "recon-demo"
version = "0.1.0"
description = "Grayscale Technical Case Study — custodian position reconciliation demo"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.11.5",
    "rapidfuzz==3.13.0",
    "python-dateutil==2.9.0.post0",
    "pandas==2.2.3",
    "strands-agents==0.1.9",
    "strands-agents-tools==0.1.9",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# code/ is the package directory; created in subsequent tasks
packages = ["code"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["code"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["code/tests"]
# The package directory is named "code", which collides with the Python
# stdlib "code" module that pdb depends on. importlib import mode skips
# the sys.path manipulation that would otherwise shadow the stdlib module
# during pytest collection.
# See https://docs.pytest.org/en/stable/explanation/pythonpath.html#import-modes
addopts = "-v --import-mode=importlib"
